try send data directly

--- a/myCubeMxConfig.ioc
+++ b/myCubeMxConfig.ioc
@@ -11,8 +11,9 @@ Dma.SPI3_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI3_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI3_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.SPI3_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-ETH.IPParameters=MediaInterface
+ETH.IPParameters=MediaInterface,PhyAddress
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
+ETH.PhyAddress=0
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
